Implemented category filter therough heat map to bar chart

--- a/src/assets/css/table.scss
+++ b/src/assets/css/table.scss
@@ -34,4 +34,11 @@
   td {
     border: 1px solid black;
   }
+  .td-data {
+    cursor: pointer;
+  }
+}
+
+.active-col {
+  background: #ffedd9;
 }
