--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -620,9 +620,12 @@ main {
   }
   header {
     .header-logo {
-      position: relative;
-      left: 0;
-      top: 0;
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      a {
+        display: block;
+      }
     }
   }
   .upload-resume-frm {
@@ -693,7 +696,12 @@ main {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   header .header-logo {
-    position: relative;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    a {
+      display: block;
+    }
   }
   .step-progressbar {
     max-width: 700px;
