--- a/src/assets/css/dashboard.scss
+++ b/src/assets/css/dashboard.scss
@@ -1,3 +1,7 @@
+.dashboard-login {
+  min-width: 400px;
+}
+
 .header {
   height: 110px;
   width: 100%;
@@ -35,6 +39,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
+  margin: 20px 0;
 
   .main-title {
     color: #181818;
@@ -42,11 +47,11 @@
     font-family: "Sora", sans-serif;
     font-weight: 600;
     line-height: 70px;
-    margin: 0 0 0.625rem;
   }
 
   .filter-section {
     display: flex;
+    align-items: center;
     gap: 20px;
   }
 }
@@ -93,6 +98,73 @@
 
     100% {
       stroke-dashoffset: -125px;
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .header {
+    height: 94px;
+    width: 100%;
+
+    .title {
+      font-size: 14px;
+    }
+    .dashboard-space {
+      width: 1px;
+      height: 50px;
+      border: 1px solid gainsboro;
+    }
+  }
+
+  .head-container {
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .main-title {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+
+    .filter-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1240px) {
+  .header {
+    height: 110px;
+    width: 100%;
+
+    .title {
+      font-size: 18px;
+    }
+    .dashboard-space {
+      width: 1px;
+      height: 50px;
+      border: 1px solid gainsboro;
+    }
+  }
+
+  .head-container {
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .main-title {
+      font-size: 18px;
+    }
+
+    .filter-section {
+      display: flex;
+      gap: 20px;
     }
   }
 }
