--- a/src/assets/css/reviews.scss
+++ b/src/assets/css/reviews.scss
@@ -48,7 +48,10 @@
 
   .comments {
     width: 50%;
-    padding: 20px;
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 0 20px;
+    margin: 10px 0;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -59,7 +62,6 @@
   .review-item {
     font-size: 14px;
     color: #333;
-    line-height: 1.5;
   }
 }
 
