--- a/src/assets/css/chart.scss
+++ b/src/assets/css/chart.scss
@@ -7,7 +7,7 @@
   .table-container,
   .chart-container {
     width: 48%;
-    height: 100%;
+    height: 1000px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 40px;
@@ -96,6 +96,7 @@
     .table-container,
     .chart-container {
       width: 90%;
+      height: 100%;
     }
   }
 
@@ -134,6 +135,7 @@
     .table-container,
     .chart-container {
       width: 90%;
+      height: 100%;
     }
   }
 
