--- a/src/assets/css/table.scss
+++ b/src/assets/css/table.scss
@@ -44,3 +44,9 @@
 .active-col {
   background: #ffedd9;
 }
+
+.table-continer-inner {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
