--- a/src/assets/css/chart.scss
+++ b/src/assets/css/chart.scss
@@ -7,7 +7,7 @@
   .table-container,
   .chart-container {
     width: 48%;
-    height: 1000px;
+    max-height: 1000px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 40px;
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  overflow-x: hidden;
   .btn-container {
     display: flex;
     gap: 10px;
