--- a/src/assets/css/chart.scss
+++ b/src/assets/css/chart.scss
@@ -100,6 +100,12 @@
     }
   }
 
+  .chart-container {
+    display: flex;
+    justify-content: start;
+    overflow-x: scroll;
+  }
+
   .filter-data-btns {
     height: 100px;
     width: 100%;
