--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -620,12 +620,9 @@ main {
   }
   header {
     .header-logo {
-      position: absolute;
-      top: 5px;
-      left: 5px;
-      a {
-        display: block;
-      }
+      position: relative;
+      left: 0;
+      top: 0;
     }
   }
   .upload-resume-frm {
@@ -679,6 +676,7 @@ main {
   }
   .topalignd-frm {
     header {
+      position: relative;
       width: 100%;
     }
   }
