--- a/src/assets/css/table.scss
+++ b/src/assets/css/table.scss
@@ -55,3 +55,11 @@
   background-color: #f2f2f2;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 767px) {
+  .table-continer-inner {
+    width: 100%;
+    display: flex;
+    justify-content: start;
+  }
+}
